added login, register and create jwtToken methods,auth controller done

--- a/bookStore/appsettings.json
+++ b/bookStore/appsettings.json
@@ -11,7 +11,7 @@
     "BookStoreAuthConnectionString": "server=localhost;database=BookStoreAuthDb;Trusted_Connection=true;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "$eCretK3y4D0Tn3tW3b4p1",
+    "Key": "$eCretK3y4D0Tn3tW3bgfs8gfg09a8g09j3ojrlkw409ug09d09sd0j4p1",
     "Issuer": "https://localhost:7251/",
     "Audience": "https://localhost:7251/"
   }
